[package]
name = "bc_funcs"
version = "0.1.2"
edition = "2024"

[workspace]
members = [
    "crates/*", 
]

[dependencies]
bc_utils ={ path = "crates/bc_utils"}
bc_indicators ={ path = "crates/bc_indicators"}
bc_utils_lg ={ path = "crates/bc_utils_lg" }
bc_exch_api_funcs={path = "crates/bc_exch_api_funcs"}
bc_utils_core={path = "crates/bc_utils_core"}
bc_signals={path = "crates/bc_signals"}
