[package]
name = "bc_exch_api_funcs"
version = "0.1.1"
edition = "2024"

[dependencies]
bc_core_funcs ={ path = "../bc_core_funcs"}
bc_utils_lg ={ path = "../bc_utils_lg" }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde ={ version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = "0.3"

[dev-dependencies]
criterion = {version = "0.3.5", features = ["html_reports", "async_tokio"]}

[[bench]]
name = "klines_bybit"
path = "benches/bybit/market/klines.rs"
harness = false