[package]
name = "bc_indicators"
version = "0.1.102"
edition = "2024"

[dependencies]
bc_utils = {path = "../bc_utils"}
bc_utils_lg = {path = "../bc_utils_lg"}
bc_settings ={ path = "../bc_settings"}

num-traits = "^0.2.19"
rustc-hash = "1.1"
criterion = {version = "0.3.5", features = ["html_reports"]}

[[bench]]
name = "osc_other"
path = "benches/indicators/osc/other.rs"
harness = false

[[bench]]
name = "no_osc_trend"
path = "benches/indicators/no_osc/trend.rs"
harness = false

[[bench]]
name = "ind_gw.rs"
path = "benches/ind_gw.rs.rs"
harness = false